--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jasmine-core": "~2.4.1",
     "jquery": "^2.2.3",
     "karma": "~1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "~1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "~1.0.2",
